# ray-delay

./: .gitmodules  Pipfile  README.md  estimate_log_error.py  pyproject.toml  requirements.txt
experiments/: 00_detecting_rays.ipynb  00_test_mem.ipynb  01_detecting_rays.ipynb  01_simulating_ray.ipynb  02_DBSCAN.ipynb  02_detecting_rays.ipynb  02_lattice_surgery.ipynb  03_adjacent_patch_errors_memory.ipynb  03_optimal_window_size.ipynb  03_signal_rate_by_distance_and_time.ipynb  04_DBSCAN.ipynb  04_lattice_surgery_distance.ipynb  04_simulating_distillation.ipynb  05_adjacent_patch_errors_memory.ipynb  05_evaluation_ideal_detection.ipynb  05_simple_neigbor_check.ipynb  05_trigger_rate_by_distance.ipynb  06_lattice_surgery_distance.ipynb  06_signal_rate_by_distance_and_time.ipynb  06_signal_rate_vs_ler.ipynb  06_simulating_distillation.ipynb  07_detection_vs_error_rate.ipynb  07_evaluation_ideal_detection.ipynb  07_simulating_distillation.ipynb  08_adjacent_patch_errors_memory.ipynb  08_evaluation_realistic_detection.ipynb  08_signal_rate_vs_ler.ipynb  09_detection_vs_error_rate.ipynb  09_evaluation_with_detection.ipynb  10_evaluation_realistic_detection.ipynb  10_lattice_surgery_distance.ipynb  11_detection_vs_error_rate.ipynb  11_evaluation_ideal_detection.ipynb  12_evaluation_ideal_detection.ipynb  13_detection_vs_error_rate.ipynb  14_evaluation_realistic_detection.ipynb  test.py
experiments/archive/: 01_simulating_ray.ipynb  04_DBSCAN.ipynb  (+4 more)
ray_delay/: factory_simulator.py  noise_model.py  noise_model_patch.py  ray_detector.py
stim_lattice_surgery/: README.md
(+55 files in other folders)
